syntax = "proto3";
package users;
option go_package = "streamflow/services/users/pb;pb";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  string confirm_password = 5;
  string role = 6;
}

message GetUserRequest {
  int32 id = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

message DeleteUserRequest {
  int32 id = 1;
}

message ListUsersRequest {
  string email = 1;
  string name = 2;
}

message UserResponse {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string role = 5;
  string created_at = 6;
}

message DeleteUserResponse {
  string message = 1;
}

message ListUsersResponse {
  repeated UserResponse users = 1;
}
