syntax = "proto3";

// =============================================================
// Playlist Service (PlaylistsService)
// =============================================================
package PlaylistsService;

option go_package = "streamflow/services/playlists/pb;pb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// -----------------------------------------------------------------
// Messages
// -----------------------------------------------------------------

message Playlist {
int64  id          = 1;
int64  owner_id    = 2; // quien cre√≥ la lista
string name        = 3;
google.protobuf.Timestamp created_at = 4;
}

message VideoInPlaylist {
int64 video_id   = 1;
string title     = 2;
}

// Create playlist
message CreatePlaylistRequest  { string name = 1; }
message CreatePlaylistResponse { Playlist playlist = 1; }

// Add video
message AddVideoRequest {
int64 playlist_id = 1;
int64 video_id    = 2;
}
message AddVideoResponse { Playlist playlist = 1; }

// Remove video
message RemoveVideoRequest {
int64 playlist_id = 1;
int64 video_id    = 2;
}
message RemoveVideoResponse { Playlist playlist = 1; }

// List playlists (only names & ids)
message ListPlaylistsResponse {
repeated Playlist playlists = 1;
}

// List videos in a playlist
message ListVideosRequest { int64 playlist_id = 1; }
message ListVideosResponse { repeated VideoInPlaylist videos = 1; }

// Delete playlist
message DeletePlaylistRequest { int64 playlist_id = 1; }

// -----------------------------------------------------------------
// Service definition
// -----------------------------------------------------------------
service PlaylistsService {
rpc CreatePlaylist  (CreatePlaylistRequest)  returns (CreatePlaylistResponse);
rpc AddVideo        (AddVideoRequest)        returns (AddVideoResponse);
rpc RemoveVideo     (RemoveVideoRequest)     returns (RemoveVideoResponse);
rpc ListPlaylists   (google.protobuf.Empty)  returns (ListPlaylistsResponse);
rpc ListVideos      (ListVideosRequest)      returns (ListVideosResponse);
rpc DeletePlaylist  (DeletePlaylistRequest)  returns (google.protobuf.Empty);
}
